--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3"
+        "php": ">=7.2",
+        "spatie/laravel-honeypot": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8.36"
