--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,12 @@
     ],
     "require": {
         "php": ">=7.2",
-        "spatie/laravel-honeypot": "^2.1"
+        "spatie/laravel-honeypot": ">=2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8.36"
+        "orchestra/testbench": "^6.0",
+        "spatie/phpunit-snapshot-assertions": "^4.0",
+        "spatie/test-time": "^1.2"
     },
     "autoload": {
         "psr-4": {
