--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "spatie/laravel-honeypot": ">=2.1"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": ">=6.3",
         "spatie/phpunit-snapshot-assertions": "^4.0",
         "spatie/test-time": "^1.2"
     },
