--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-update-snapshots": "vendor/bin/phpunit -d --update-snapshots",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "update-test": "composer --prefer-stable update && composer test && composer update --prefer-lowest && composer test && composer update"
     },
     "config": {
         "sort-packages": true
