--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,14 @@ env:
 
 jobs:
     allow_failures:
-        -  php: 8
+        -  php: 8.0
+        -  php: hhvm
         -  php: nightly
 
 php:
     - nightly
-    - 8
+    - hhvm
+    - 8.0
     - 7.4
 
 before_script:
