--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     ],
     "require": {
         "php": ">=7.4",
+        "sfneal/actions": ">=1.0",
+        "sfneal/models": ">=1.1",
+        "sfneal/scopes": ">=1.0",
         "spatie/laravel-honeypot": ">=3.0"
     },
     "require-dev": {
