--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "test": "vendor/bin/phpunit",
         "test-update-snapshots": "vendor/bin/phpunit -d --update-snapshots",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "upload-coverage": "php vendor/bin/ocular code-coverage:upload --format=php-clover phpunit.xml.dist",
         "update-test": "composer --prefer-stable update && composer test && composer update --prefer-lowest && composer test && composer update"
     },
     "config": {
