FIX sfneal package version constraint syntax

--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     "require": {
         "php": ">=7.4",
         "sfneal/actions": "^1.0",
-        "sfneal/datum": ">=1.0",
-        "sfneal/models": ">=1.2",
-        "sfneal/scopes": ">=1.0",
-        "spatie/laravel-honeypot": ">=3.0"
+        "sfneal/datum": "^1.0",
+        "sfneal/models": "^1.2",
+        "sfneal/scopes": "^1.0",
+        "spatie/laravel-honeypot": "^3.0"
     },
     "require-dev": {
         "orchestra/testbench": ">=6.3",
