MAKE `TrackSpam` migration, factory & seeder
ADD autoloading of 'database' directory in composer.json.
ADD use of `TrackSpamFactory` in `TrackSpam` model.

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
         "spatie/test-time": "^1.2.1"
     },
     "autoload": {
+        "classmap": [
+            "database"
+        ],
         "psr-4": {
             "Sfneal\\Honeypot\\": "src"
         }
