--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "spatie/laravel-honeypot": "^3.0"
     },
     "require-dev": {
-        "orchestra/testbench": ">=6.3",
+        "phpunit/phpunit": ">=9.0",
+        "orchestra/testbench": ">=6.7.1",
         "scrutinizer/ocular": "^1.8",
         "sfneal/mock-models": "^0.5.0",
         "spatie/phpunit-snapshot-assertions": ">=4.2.2",
