--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
     "require": {
         "php": ">=7.4",
         "sfneal/actions": "^2.0",
+        "sfneal/caching": "^2.0",
         "sfneal/controllers": "^2.1",
         "sfneal/datum": "^1.0",
         "sfneal/models": "^2.0",
         "sfneal/scopes": "^1.0",
-        "sfneal/tracking": ">=1.0.2",
+        "sfneal/tracking": "^1.0.2",
         "spatie/laravel-honeypot": "^3.0"
     },
     "require-dev": {
