--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4|^8.0",
         "sfneal/actions": "^2.0",
-        "sfneal/caching": "^2.0",
+        "sfneal/caching": "^2.0|^3.0",
         "sfneal/controllers": "^2.1",
         "sfneal/datum": "^1.0",
         "sfneal/models": "^2.0",
@@ -27,8 +27,8 @@
         "spatie/laravel-honeypot": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=9.0",
-        "orchestra/testbench": ">=6.7.1",
+        "orchestra/testbench": "^6.24.1|^7.0",
+        "phpunit/phpunit": "^9.3",
         "scrutinizer/ocular": "^1.8",
         "sfneal/mock-models": ">=0.9",
         "spatie/phpunit-snapshot-assertions": ">=4.2.2",
