--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "sfneal/actions": "^2.0",
         "sfneal/caching": "^2.0|^3.0",
         "sfneal/controllers": "^2.1",
-        "sfneal/datum": "^1.0|^2.0",
+        "sfneal/datum": "^1.0",
         "sfneal/models": "^2.0",
         "sfneal/scopes": "^1.0",
         "sfneal/tracking": "^1.0.2",
