--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,11 @@
-name: docker
+name: Docker Builds
 
-on: [push, pull_request]
+on:
+    push:
+        branches:
+            - master
+    release:
+        types: [published]
 
 jobs:
     test:
@@ -8,24 +13,21 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ ubuntu-latest ]
-                php: [ 7.4, 8.0, 8.1 ]
+                os: [ubuntu-latest]
+                php: [7.4, 8.0, 8.1]
                 composer-test: [docker-test, docker-test-lowest]
 
-        name: PHP${{ matrix.php }} - ${{ matrix.composer-test }}
+        name: PHP ${{ matrix.php }} - ${{ matrix.composer-test }}
 
         steps:
             -   name: Checkout code
                 uses: actions/checkout@v1
 
-            -   name: Setup PHP
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: ${{ matrix.php }}
-                    coverage: none
-
             -   name: Build Docker Images
                 run: composer ${{ matrix.composer-test }}-build ${{ matrix.php }}
+
+            -   name: Pull Docker Images
+                run: docker compose pull --ignore-pull-failures
 
             -   name: Test Docker Images
                 run: composer ${{ matrix.composer-test }} ${{ matrix.php }}
